--- a/Scripts/DownloadandPrintingGuide.Rmd
+++ b/Scripts/DownloadandPrintingGuide.Rmd
@@ -6,7 +6,7 @@ geometry: margin=1.7cm
 output: pdf_document
 params:
   dropbox_dir: D:/Dropbox/EarthArtAustralia
-  name: Every Road in Melbourne
+  name: Rivers of Australia
 
 ---
 
@@ -49,7 +49,7 @@ paper_size = function(pixels, DPI=300, tolerance=0.95){
 
 
 # Import data file and subset to map name
-data_df = read_excel(paste0(params$dropbox_dir, "/Download links/DownloadandPrintingGuide_data.xlsx"))
+data_df = read_excel(paste0(params$dropbox_dir, "/Download links/DownloadandPrintingGuide_data.xls"))
 data_sub = filter(data_df, name == params$name)
 
 # Split download link string if multiple versions
@@ -67,8 +67,24 @@ filesize_mb = paste0(round(filesize / 1024 / 1024, 0),"mb")
 ```
 
 ```{r, out.width = "250px", echo = FALSE, fig.align='center'}
-library("png")
-knitr::include_graphics(paste0(params$dropbox_dir, data_sub$image_link))
+
+# Identify possible frame directory
+split_path = strsplit(data_sub$file_link, "/")[[1]] # split_path = strsplit("/Australia/melbourne_city_highres.png", "/")[[1]]
+image_link = paste0("D:/Dropbox/EarthArtAustralia", "/", split_path[2], "/", 
+                    gsub("_highres.png", "", split_path[3]), "/", 
+                    gsub("highres.png", "frame.jpg", split_path[3]))
+
+# If frame image exists, use by default. Otherwise, use value specified in "image_link" column
+if (file.exists(image_link)) {
+  
+  knitr::include_graphics(image_link)  
+  
+  } else {
+    
+  knitr::include_graphics(paste0(params$dropbox_dir, data_sub$image_link))
+    
+  }
+
 ```
 
 ## Download link 
@@ -93,7 +109,7 @@ Once you download, simply take the `r if( multiple ){ "files" } else { "file" }`
 
 If you have any questions at all about the data in the maps or printing, please don't hesitate to [contact me via Etsy](https://www.etsy.com/au/conversations/new?with_id=85706160). I also do custom maps for any part of the world, so send me a message if you have something in mind and I'll see what I can do! (depending on the data and time required, custom maps typically cost between $25 to $80 AUD)
 
-Finally, if you like the `r if( length(links_n) > 1 ){ "maps" } else { "map" }` I'd really love it if you could leave me a quick review on Etsy (click ["You > Purchases and Reviews"](https://www.etsy.com/au/your/purchases?ref=hdr_user_menu)). Send me a message if you do and I'll give you a **coupon for 50% off** any future orders! 
+Finally, if you like the `r if( length(links_n) > 1 ){ "maps" } else { "map" }` I'd really love it if you could leave me a quick review on Etsy (click ["You > Purchases and Reviews"](https://www.etsy.com/au/your/purchases?ref=hdr_user_menu)). Send me a message if you do and I'll give you **any ready-made map of your choice for free**! 
 
 Hope they look amazing on your wall!
 
