--- a/Scripts/DownloadandPrintingGuide.Rmd
+++ b/Scripts/DownloadandPrintingGuide.Rmd
@@ -104,7 +104,7 @@ Thanks for purchasing `r params$name`! Due to Etsy's small upload limit, please 
 
 Once you download, simply take the `r if( multiple ){ "files" } else { "file" }` along to your local print shop on a USB drive to get `r if( multiple ){ "them" } else { "it" }` printed! The `r if( multiple ){ "maps are" } else { "map is" }` suitable for printing out extremely large: up to `r paper_size(pixels = data_sub$pixels, DPI = 300)`. I recommend selecting a heavier semi-gloss/luster paper (150-250 gsm) for the best printing results!
 
-`r if(any(grepl("CMYK", version_n))){ "**Print-optimised CMYK file:** This product also comes with a print-optimised .tif file of the 'Plasma' version of the map in the [CMYK color space](http://sploid.gizmodo.com/the-difference-between-rgb-and-cmyk-explained-1777830600). Even though the file may appear more washed out than the .png file you also recieved, printing shops often prefer this format as it typically results in improved printing results. I'd recommend bringing both Plasma .png and .tif versions along to the printer and see which they prefer!
+`r if(any(grepl("CMYK", version_n))){ "**Print-optimised CMYK file:** This product also comes with a print-optimised .tif file of the 'Plasma' version of the map in the [CMYK color space](http://sploid.gizmodo.com/the-difference-between-rgb-and-cmyk-explained-1777830600). Even though the file may appear more washed out than the .png file you also received, printing shops often prefer this format as it typically results in improved printing results. I'd recommend bringing both Plasma .png and .tif versions along to the printer and see which they prefer!
 " }`
 
 ## Custom maps + please leave a review! ###
@@ -119,9 +119,8 @@ Robbi Bishop-Taylor
 *EarthArtAustralia*
 
 **Etsy store:** <https://www.etsy.com/shop/EarthArtAustralia>  
-**Facebook page:** <https://www.facebook.com/EarthArtAustralia/>  
-**Instagram:** <https://www.instagram.com/EarthArtAustralia/>  
-**Pinterest:** <https://au.pinterest.com/EarthArtAus/>  
+**Facebook:** <https://www.facebook.com/EarthArtAustralia/>  
+**Instagram:** <https://www.instagram.com/EarthArtAustralia/>
   
 ------
   
