--- a/Scripts/DownloadandPrintingGuide.Rmd
+++ b/Scripts/DownloadandPrintingGuide.Rmd
@@ -21,32 +21,59 @@ library(dplyr)
 
 # Define paper size function
 paper_size = function(pixels, DPI=300, tolerance=0.95){
-  
+
   pixels_n = as.numeric(strsplit(pixels, " x ")[[1]])
   inches = max(pixels_n) / DPI
   cm = inches * 2.54
-  
+
   if (cm > 141.4 * tolerance) {
-    paper_size = paste0("B0 size (1.0 x 1.4 m / 3.3 x 4.6 ft) at ~", DPI, 
+    paper_size = paste0("B0 size (1.0 x 1.4 m / 3.3 x 4.6 ft) at ~", DPI,
                         " DPI (A1 size or above is best to make out all of the smaller features)")
-    
+
   } else if(cm > 118.9 * tolerance) {
-    paper_size = paste0("A0 size (84 x 119 cm / 33 x 47 in) at ~", DPI, 
+    paper_size = paste0("A0 size (84 x 119 cm / 33 x 47 in) at ~", DPI,
                         " DPI (A1 size or above is best to make out all of the smaller features)")
-    
+
   } else if(cm > 100.0 * tolerance) {
     paper_size = paste0("B1 size (71 x 100 cm / 28 x 39 in) at ~", DPI, " DPI (or larger at reduced resolution)")
-    
+
   } else if(cm > 84.1 * tolerance) {
     paper_size = paste0("A1 size (59 x 84 cm	/ 23 x 33 in) at ~", DPI, " DPI (or larger at reduced resolution)")
-    
-  } else { 
+
+  } else {
     paper_size = "ERROR" }
-  
+
   return(paper_size)
-  
+
 }
 
+# # Define paper size function
+# paper_size = function(pixels, DPI=200){
+# 
+#   pixels_n = as.numeric(strsplit(pixels, " x ")[[1]])
+#   inches = max(pixels_n) / DPI
+#   cm = inches * 2.54
+# 
+#   if (cm > 141.4 * tolerance) {
+#     paper_size = paste0("B0 size (1.0 x 1.4 m / 3.3 x 4.6 ft) at ~", DPI,
+#                         " DPI (A1 size or above is best to make out all of the smaller features)")
+# 
+#   } else if(cm > 118.9 * tolerance) {
+#     paper_size = paste0("A0 size (84 x 119 cm / 33 x 47 in) at ~", DPI,
+#                         " DPI (A1 size or above is best to make out all of the smaller features)")
+# 
+#   } else if(cm > 100.0 * tolerance) {
+#     paper_size = paste0("B1 size (71 x 100 cm / 28 x 39 in) at ~", DPI, " DPI (or larger at reduced resolution)")
+# 
+#   } else if(cm > 84.1 * tolerance) {
+#     paper_size = paste0("A1 size (59 x 84 cm	/ 23 x 33 in) at ~", DPI, " DPI (or larger at reduced resolution)")
+# 
+#   } else {
+#     paper_size = "ERROR" }
+# 
+#   return(paper_size)
+# 
+# }
 
 # Import data file and subset to map name
 data_df = read_excel(paste0(params$dropbox_dir, "/Download links/DownloadandPrintingGuide_data.xls"))
@@ -89,7 +116,7 @@ if (file.exists(image_link)) {
 
 ## Download `r if( multiple ){ "links" } else { "link" }`
 
-Thanks for purchasing `r params$name`! Please download the `r data_sub$pixels` pixel, `r I(filesize_mb)` high resolution `r if( multiple ){ "maps" } else { "map" }` using the `r if( multiple ){ "links" } else { "link" }` below:
+Thanks for purchasing `r params$name`! Please download the ultra-high resolution `r data_sub$pixels` pixel `r if( multiple ){ "maps" } else { "map" }` using the `r if( multiple ){ "links" } else { "link" }` below:
 
 `r if(!is.na(nchar(links_n[1]))){ paste0("### [>> Click here to download ", version_n[1], " <<](", links_n[1], ")") }`
 `r if(!is.na(nchar(links_n[2]))){ paste0("### [>> Click here to download ", version_n[2], " <<](", links_n[2], ")") }`
@@ -102,11 +129,7 @@ Thanks for purchasing `r params$name`! Please download the `r data_sub$pixels` p
 
 \begingroup\footnotesize
 
-`r if(any(grepl("styles", version_n))){ 
-
-paste0("If the Styles link does not work, please try copy-pasting the following link into your browser, or send me a message on Etsy!   ", links_n[2])
-
-}`
+The download links and images may fail to open on mobile or the Microsoft Edge browser. If you run into issues, please try on a desktop computer or send me an Etsy message!
 
 \endgroup
 
@@ -127,7 +150,7 @@ Robbi Bishop-Taylor
 
 ## Follow EarthArtAustralia online!
 
-**[Etsy store](https://www.etsy.com/shop/EarthArtAustralia)   |   [Facebook](https://www.facebook.com/EarthArtAustralia/)   | [Instagram](https://www.instagram.com/EarthArtAustralia/)   |   [Pinterest](https://au.pinterest.com/earthartaus/)  **
+**[Etsy store](https://www.etsy.com/shop/EarthArtAustralia)   |   [Facebook](https://www.facebook.com/EarthArtAus/)   | [Instagram](https://www.instagram.com/EarthArtAus/)   |   [Pinterest](https://au.pinterest.com/earthartaus/)  **
   
 ## About the `r if( length(links_n) > 1 ){ "maps" } else { "map" }`
 `r data_sub$map_desc`
